--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <table cellspacing = "20">
             <tr>
-                <td><img src="IMG_20221026_021346_942-modified-modified.png" alt="Tanay Profile Picture"></td>
+                <td><img src="images\IMG_20221026_021346_942-modified-modified.png" alt="Tanay Profile Picture"></td>
                 <td> <h1>Tanay Mukker</h1>
                     <p><em> Student at <strong><a href="https://thapar.edu/">TIET, Patiala</a></strong></em></p>
                     <p>I am a 1st Year student having interest in <strong>Coding</strong>, <strong>Cars</strong> and <strong>Music</strong>.</p>
